Updated Dockerfiles and Collection file

--- a/sample-activiti7-cloud-connector/src/main/resources/application.properties
+++ b/sample-activiti7-cloud-connector/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-server.port=8080
 spring.application.name=sample-activiti7-cloud-connector
 
-spring.cloud.stream.bindings.sampleConnectorConsumer.destination=serviceTask1Impl
+spring.cloud.stream.bindings.sampleConnectorConsumer.destination=serviceTaskImpl
 spring.cloud.stream.bindings.sampleConnectorConsumer.contentType=application/json
 spring.cloud.stream.bindings.sampleConnectorConsumer.group=${spring.application.name}
 
@@ -24,7 +23,7 @@ activiti.keycloak.client-user=${ACT_KEYCLOAK_CLIENT_USER:client}
 activiti.keycloak.client-password=${ACT_KEYCLOAK_CLIENT_PASSWORD:client}
 # this user needs to have the realm management roles assignedld be spring-boot-jasypt, keycloak may support others (can it be set as env variable?)
 
-spring.rabbitmq.host=${ACT_RABBITMQ_HOST:localhost}
+spring.rabbitmq.host=${ACT_RABBITMQ_HOST:rabbitmq}
 
 logging.level.org.springframework.cloud.stream.binding=ERROR
 
