--- a/sample-activiti7-runtime-bundle/Dockerfile
+++ b/sample-activiti7-runtime-bundle/Dockerfile
@@ -2,6 +2,6 @@ FROM openjdk:alpine
 RUN apk --update add fontconfig ttf-dejavu
 ENV PORT 8080
 EXPOSE 8080
-COPY target/sample-activiti7-runtime-bundle-0.0.1-SNAPSHOT.jar /opt/sample-activiti7-runtime-bundle-0.0.1-SNAPSHOT.jar
+COPY target/*.jar /opt/app.jar
 WORKDIR /opt
-ENTRYPOINT exec java $JAVA_OPTS -jar sample-activiti7-runtime-bundle-0.0.1-SNAPSHOT.jar
+ENTRYPOINT exec java $JAVA_OPTS -jar app.jar
